Set vertical overflow to scroll to prevent flicking

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,10 @@
 @import './themes';
 @import './tool';
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-family: sans-serif;
   margin: 0;
